solutions/comprehensive-review/adoption-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adoption
spec:
  selector:
    matchLabels:
      app: adoption
  replicas: 1
  template:
    metadata:
      labels:
        app: adoption
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: adoption
          image: quay.io/redhattraining/ossm-adoption-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adoption
  name: adoption
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: adoption
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: adoption-vs
spec:
  hosts:
    - "*"
  gateways:
    - adoptapup-gateway
  http:
    - match:
        - uri:
            prefix: /adoption
      route:
        - destination:
            host: adoption
            port:
              number: 8080
