solutions/comprehensive-review/mongodb-dr.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "mongodb-dr"
  namespace: "adoptapup"
spec:
  host: "mongodb.adoptapup.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
