solutions/comprehensive-review/news-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: news
spec:
  hosts:
  - news-adoptapup-news.apps.ocp4.example.com
  ports:
  - name: http-80
    number: 80
    protocol: http
