solutions/comprehensive-review/notification-pool.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: notification-dr
spec:
  host: notification
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 5
      http:
        maxRequestsPerConnection: 1
