solutions/comprehensive-review/shelter-dr.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "shelter-dr"
  namespace: "adoptapup"
spec:
  host: "shelter.adoptapup.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
